.apex/src/objects/Order_c__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>TotalPrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalProductCount__c</fullName>
        <label>TotalProductCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Order__c</label>
    <nameField>
        <label>Order__c  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>